--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
         "@fortawesome/free-regular-svg-icons": "^6.0.0",
         "@fortawesome/free-solid-svg-icons": "^6.7.2",
         "@fortawesome/react-fontawesome": "^0.2.2",
+        "@tippyjs/react": "^4.2.6",
         "classnames": "^2.5.1",
         "cra-template": "1.2.0",
         "normalize.css": "^8.0.1",
         "prop-types": "^15.8.1",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
         "react-router-dom": "^7.1.1",
         "react-scripts": "5.0.1",
+        "typescript": "^4.9.5",
         "web-vitals": "^4.2.4"
     },
     "devDependencies": {
@@ -27,8 +29,7 @@
         "babel-plugin-module-resolver": "^5.0.2",
         "customize-cra": "^1.0.0",
         "react-app-rewired": "^2.2.1",
-        "sass": "^1.83.0",
-        "typescript": "^5.7.2"
+        "sass": "^1.83.0"
     },
     "scripts": {
         "start": "react-app-rewired start",
