--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.0",
         "@fortawesome/fontawesome-svg-core": "^6.7.2",
         "@fortawesome/free-brands-svg-icons": "^6.0.0",
         "@fortawesome/free-regular-svg-icons": "^6.0.0",
         "@fortawesome/free-solid-svg-icons": "^6.7.2",
         "@fortawesome/react-fontawesome": "^0.2.2",
+        "@mui/material": "^6.3.1",
         "@tippyjs/react": "^4.2.6",
         "classnames": "^2.5.1",
         "cra-template": "1.2.0",
@@ -21,7 +24,7 @@
         "react-i18next": "^15.4.0",
         "react-router-dom": "^7.1.1",
         "react-scripts": "5.0.1",
-        "typescript": "^4.9.5",
+        "typescript": "^5.7.2",
         "web-vitals": "^4.2.4"
     },
     "devDependencies": {
