Cài đặt Swipper hoàn thành phần Slider

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@fortawesome/react-fontawesome": "^0.2.2",
         "@mui/material": "^6.3.1",
         "@tippyjs/react": "^4.2.6",
+        "bootstrap": "^5.3.3",
         "classnames": "^2.5.1",
         "cra-template": "1.2.0",
         "i18next": "^24.2.0",
@@ -19,11 +20,13 @@
         "normalize.css": "^8.0.1",
         "prop-types": "^15.8.1",
         "react": "^18.3.1",
+        "react-bootstrap": "^2.10.7",
         "react-dark-mode-toggle": "^0.2.0",
         "react-dom": "^18.3.1",
         "react-i18next": "^15.4.0",
         "react-router-dom": "^7.1.1",
         "react-scripts": "5.0.1",
+        "swiper": "^11.2.0",
         "typescript": "^5.7.2",
         "web-vitals": "^4.2.4"
     },
