--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "bootstrap": "^5.3.3",
         "classnames": "^2.5.1",
         "cra-template": "1.2.0",
+        "framer-motion": "^11.17.0",
         "i18next": "^24.2.0",
         "i18next-browser-languagedetector": "^8.0.2",
         "normalize.css": "^8.0.1",
@@ -24,6 +25,7 @@
         "react-dark-mode-toggle": "^0.2.0",
         "react-dom": "^18.3.1",
         "react-i18next": "^15.4.0",
+        "react-intersection-observer": "^9.14.1",
         "react-router-dom": "^7.1.1",
         "react-scripts": "5.0.1",
         "swiper": "^11.2.0",
