--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "prop-types": "^15.8.1",
         "react": "^18.3.1",
         "react-bootstrap": "^2.10.7",
+        "react-countup": "^6.5.3",
         "react-dark-mode-toggle": "^0.2.0",
         "react-dom": "^18.3.1",
         "react-i18next": "^15.4.0",
