--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "react-dom": "^18.3.1",
         "react-i18next": "^15.4.0",
         "react-intersection-observer": "^9.14.1",
+        "react-rating": "^2.0.5",
         "react-router-dom": "^7.1.1",
         "react-scripts": "5.0.1",
         "swiper": "^11.2.0",
