--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@fortawesome/react-fontawesome": "^0.2.2",
         "@mui/material": "^6.3.1",
         "@tippyjs/react": "^4.2.6",
+        "@videojs/themes": "^1.0.1",
         "bootstrap": "^5.3.3",
         "classnames": "^2.5.1",
         "cra-template": "1.2.0",
@@ -27,11 +28,13 @@
         "react-dom": "^18.3.1",
         "react-i18next": "^15.4.0",
         "react-intersection-observer": "^9.14.1",
+        "react-player": "^2.16.0",
         "react-rating": "^2.0.5",
         "react-router-dom": "^7.1.1",
         "react-scripts": "5.0.1",
         "swiper": "^11.2.0",
         "typescript": "^5.7.2",
+        "video.js": "^8.21.0",
         "web-vitals": "^4.2.4"
     },
     "devDependencies": {
