--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@fortawesome/free-solid-svg-icons": "^6.7.2",
         "@fortawesome/react-fontawesome": "^0.2.2",
         "@mui/material": "^6.3.1",
+        "@react-google-maps/api": "^2.20.6",
         "@tippyjs/react": "^4.2.6",
         "@videojs/themes": "^1.0.1",
         "bootstrap": "^5.3.3",
